--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 
 G4/insurance/Insurance(1).xlsx
+Energia/WorldEnergyConsumption.csv
+Energia/ajuste_Africa.csv
+Energia/ajuste_Americas.csv
+Energia/ajuste_Asia.csv
+Energia/ajuste_Europe.csv
+Energia/ajuste_Oceania.csv
+Energia/energia.R
+Energia/iso_3_continents.csv
+Energia/iso_3digit_alpha_country_codes.xls
+Energia/iso_europa.csv
+infografia.R
+violines_mal_tiempo.png
